crates/plotnik-tests/tests/04-emit/bytecode/anchors/soft_anchor_before_optional.txt
Q = (array
  .
  ";"?
  (identifier) @id
)
------------------ DIAGNOSTICS -------------------
error: after the soft anchor (`.`), no `array` places this child first; an `array` begins with `"["`
 --> query.ptk:1:6
  |
1 | Q = (array
  |      ^^^^^
  |
help: here `.` skips extras only because one side can match an anonymous token; use `(_)` for a named node, or drop the anchor to match these children in any positions
